# karbowanec

./: .gitmodules  CMakeLists.txt  README.md  ReleaseNotes.txt
.github/workflows/: check.yml  matrix.yml  release.yml
include/: BlockchainExplorerData.h  CryptoNote.h  CryptoTypes.h  INode.h  ITransaction.h  ITransfersContainer.h  ITransfersSynchronizer.h  IWallet.h  IWalletLegacy.h
src/: CMakeLists.txt  CheckpointsData.h  CryptoNoteConfig.h  Miners.h  version.h.in
src/BlockchainDB/: BlockchainDB.cpp  BlockchainDB.h
src/BlockchainDB/Lmdb/: db_lmdb.cpp  db_lmdb.h
src/BlockchainExplorer/: BlockchainExplorer.cpp  BlockchainExplorerDataBuilder.cpp  BlockchainExplorerDataBuilder.h
src/Checkpoints/: Checkpoints.cpp  CheckpointsData.h
src/Common/: BinaryArray.cpp  BinaryArray.hpp  CommandLine.cpp  CommandLine.h  Files.cpp  Files.hpp  IInputStream.cpp  IInputStream.h  IOutputStream.cpp  IOutputStream.h  Invariant.cpp  Invariant.hpp  Math.h  MemoryInputStream.h  Nocopy.hpp  PathTools.cpp  PathTools.h  PathTools.mm  ShuffleGenerator.h  StreamTools.h  Streams.hpp  StringTools.cpp  ThreadPool.h  Threadpool.cpp  Threadpool.h  Util.cpp  Util.h  Varint.cpp  Varint.hpp  file_io_utils.h  string.hpp
src/CryptoNoteCore/: Account.cpp  Account.h  BlockIndex.cpp  BlockIndex.h  Blockchain.cpp  Blockchain.h  BlockchainIndices.cpp  Checkpoints.cpp  Core.cpp  Core.h  CoreConfig.cpp  CoreConfig.h  CryptoNoteBasic.cpp  CryptoNoteBasic.h  CryptoNoteFormatUtils.cpp  CryptoNoteFormatUtils.h  CryptoNoteSerialization.cpp  CryptoNoteSerialization.h  Currency.cpp  Currency.h  DB.cpp  DB.hpp  DBlmdb.cpp  DBlmdb.hpp  ICore.h  IMinerHandler.h  Miner.cpp  Miner.h  MinerConfig.cpp  MinerConfig.h  Transaction.cpp  TransactionExtra.h  TransactionPool.cpp  TransactionPool.h  TransactionPrefixImpl.cpp  UpgradeDetector.h
src/CryptoNoteProtocol/: CryptoNoteProtocolDefinitions.h  CryptoNoteProtocolHandler.cpp  CryptoNoteProtocolHandler.h
src/Daemon/: Daemon.cpp  DaemonCommandsHandler.cpp  DaemonCommandsHandler.h
src/GreenWallet/: CommandDispatcher.cpp  CommandImplementations.cpp  CommandImplementations.h  Open.cpp  Transfer.cpp  WalletConfig.h  ZedWallet.cpp
src/InProcessNode/: InProcessNode.cpp  InProcessNode.h
src/Miner/: BlockchainMonitor.cpp  BlockchainMonitor.h  Miner.cpp  Miner.h  MinerManager.cpp  MinerManager.h  MiningConfig.cpp  MiningConfig.h  main.cpp
src/NodeRpcProxy/: NodeRpcProxy.cpp  NodeRpcProxy.h
src/P2p/: NetNode.cpp  NetNode.h  NetNodeCommon.h  P2pNetworks.h  P2pNode.cpp
src/PaymentGate/: NodeFactory.cpp  PaymentServiceJsonRpcMessages.cpp  PaymentServiceJsonRpcMessages.h  PaymentServiceJsonRpcServer.cpp  PaymentServiceJsonRpcServer.h  WalletService.cpp  WalletService.h
src/PaymentGateService/: ConfigurationManager.cpp  PaymentGateService.cpp  PaymentServiceConfiguration.cpp  PaymentServiceConfiguration.h  main.cpp
src/Platform/Windows/System/: Dispatcher.cpp
src/PoolWallet/: PoolWallet.cpp  PoolWallet.h
src/Rpc/: CoreRpcServerCommandsDefinitions.h  HttpClient.cpp  HttpClient.h  HttpRootCerts.h  HttpServer.cpp  HttpServer.h  RpcServer.cpp  RpcServer.h  RpcServerConfig.cpp
src/Serialization/: BinarySerializationTools.h  BlockchainExplorerDataSerialization.cpp  SerializationOverloads.h
src/SimpleWallet/: SimpleWallet.cpp  SimpleWallet.h
src/System/: SocketStream.cpp
src/Transfers/: BlockchainSynchronizer.cpp  TransfersConsumer.cpp  TransfersContainer.cpp  TransfersContainer.h  TransfersSynchronizer.cpp  TransfersSynchronizer.h
src/Wallet/: LegacyKeysImporter.cpp  PoolRpcServer.cpp  PoolRpcServer.h  WalletGreen.cpp  WalletGreen.h  WalletRpcServer.cpp  WalletRpcServer.h  WalletRpcServerCommandsDefinitions.h  WalletSerializationV1.cpp  WalletSerializationV2.cpp
src/WalletLegacy/: WalletLegacy.cpp  WalletLegacy.h  WalletLegacySerialization.cpp  WalletLegacySerializer.cpp  WalletLegacySerializer.h  WalletRequest.h  WalletSendTransactionContext.h  WalletTransactionSender.cpp  WalletTransactionSender.h  WalletUnconfirmedTransactions.cpp  WalletUnconfirmedTransactions.h  WalletUserTransactionsCache.cpp  WalletUserTransactionsCache.h
src/crypto/: arm8_neon.hpp  arm_vfp.hpp  aux_hash.h  balloon.c  balloon.h  balloon_s.c  chacha8.h  cn_aux.hpp  cn_slow_hash.hpp  cn_slow_hash_hard_arm.cpp  cn_slow_hash_hard_intel.cpp  cn_slow_hash_intel_avx2.cpp  cn_slow_hash_soft.cpp  cn_var.hpp  crc256.c  crc256.h  crypto-ops.c  crypto-ops.h  crypto.cpp  crypto.h  cryptonight.cpp  cryptonight.hpp  generic-ops.h  hash-ops.h  hash.c  hash.h  hw_detect.hpp  keccak.c  keccak.h  random.h  saes_data.h  sha256.c  skein.c  skein.h  slow-hash.c  soft_aes.hpp  squash.c  yespower-opt.c  yespower-platform.c
src/zedwallet/: Open.cpp  Transfer.cpp
tests/: CMakeLists.txt
tests/CryptoTests/: main.cpp
tests/Hash/: main.cpp
tests/HashTests/: main.cpp
tests/PerformanceTests/: CheckRingSignature.h  ConstructTransaction.h  main.cpp
tests/TestGenerator/: TestGenerator.cpp
tests/UnitTests/: ICoreStub.h
utils/: prep-aarch64.sh
